--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@ SECRET_KEY=your-secret-key-change-this-in-production
 JWT_SECRET_KEY=your-jwt-secret-key-change-this-in-production
 
 # Database Configuration
-# For local development
-DATABASE_URL=sqlite:///database.db
-# For Render with persistent disk
-# DATABASE_URL=sqlite:////data/database.db
+# For local development (SQLite)
+# DATABASE_URL=sqlite:///database.db
+# For Render (PostgreSQL - automatically provided, no need to set)
+# DATABASE_URL will be set automatically by Render
 
 # Admin User (created on first run)
 ADMIN_EMAIL=admin@example.com
